test/success/cast.cvc
#include "civic.h"

export int main() {
    int a = 10;
    float b = (float) a;

    return 0;
}
