test/fail/overflow.cvc
#include "civic.h"

export int main() {
    int a = 10000000000000000000;
    return 0;
}
